--- a/05 - Menjadi Front-End Web Developer Expert/01 - dicoding-blog/src/styles/main.css
+++ b/05 - Menjadi Front-End Web Developer Expert/01 - dicoding-blog/src/styles/main.css
@@ -43,6 +43,13 @@ body {
   color: #212121;
 }
 
+.header__menu {
+  font-size: 32px;
+  margin: 10px auto;
+  display: block;
+  width: 30px;
+}
+
 /*
  * Top level navigation
  */
