--- a/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
@@ -8,24 +8,83 @@
 <body>
 
   <header>
-    <h1>Gurih Nusantara</h1>
-    <nav>
-      <a href="./">Home</a>
-      <a href="#">Favorite</a>
-      <a href="#">About Us</a>
+    <div class="title">
+      <img src="./images/logo/logo.webp" alt="logo-gurih">
+      <!-- <h1>Gurih Nusantara</h1> -->
+    </div>
+    <nav class="navbar">
+      <a tabindex="1" href="./">Home</a>
+      <a tabindex="2" href="#explore">Favorite</a>
+      <a tabindex="3" href="https://s.id/ariafatah">About Us</a>
+      <!-- <a tabindex="3" href="#">About Us</a> -->
     </nav>
   </header>
-  
-  <section id="hero">
-    <img src="./images/heros/hero-image_1.jpg" alt="">
-  </section>
 
-  <section id="Restaurant">
+  <main>
+    <section id="hero">
+      <img src="./images/heros/hero-image_2.jpg" alt="">
+    </section>
 
-  </section>
+    <div id="explore" tabindex="4" class="title">
+      <h1>explore Restaurant</h1>
+    </div>
+    
+    <section id="restaurant">
 
-  <footer>
-    <h1>Copyright &copy;2024 - Gurih Nusantara</h1>
+      <div class="card">
+        <div class="card-image">
+          <img src="https://restaurant-api.dicoding.dev/images/medium/41" alt="">
+        </div>
+        <div class="card-content" tabindex="0">
+          <h2>Rating: 4.6</h2>
+          <h3>Bring Your Phone Cafe</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-image">
+          <img src="https://restaurant-api.dicoding.dev/images/medium/07" alt="">
+        </div>
+        <div class="card-content" tabindex="0">
+          <h2>Rating: 4.6</h2>
+          <h3>Bring Your Phone Cafe</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-image">
+          <img src="https://restaurant-api.dicoding.dev/images/medium/38" alt="">
+        </div>
+        <div class="card-content" tabindex="0">
+          <h2>Rating: 4.6</h2>
+          <h3>Bring Your Phone Cafe</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-image">
+          <img src="https://restaurant-api.dicoding.dev/images/medium/07" alt="">
+        </div>
+        <div class="card-content" tabindex="0">
+          <h2>Rating: 4.6</h2>
+          <h3>Bring Your Phone Cafe</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
+        </div>
+      </div>
+      
+    </section>
+  </main>
+
+  <footer tabindex="0">
+    <div class="title">
+      <h1>Copyright &copy;2024 - Gurih Nusantara</h1>
+    </div>
+    <div class="footer-content">
+
+    </div>
   </footer>
 
 </body>
