--- a/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/styles/main.css
+++ b/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/styles/main.css
@@ -1,27 +1,181 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 * {
+  font-family: 'Poppins', Tahoma ,sans-serif;
+  margin: 0; padding: 0;
   box-sizing: border-box;
   outline: none;
-  margin: 0; padding: 0;
+  text-decoration: none;
+  text-transform: capitalize;
+  user-select: none;
+}
+html {
+  overflow-x: hidden;
+  scroll-padding-top: 50px;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
+:root {
+  --brd: 0.3px solid black;
+}
 img {
   display: block;
 }
 
+
+
 /* body */
+body {
+  padding-top: 50px;
+}
+
+/* main */
+main {
+  display: flex;
+  flex-direction: column;
+  /* padding: 10px 0; */
+}
 
 /* header */
+header {
+  width: 100%;
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  background: #333333;
+  border-bottom: 0.5px solid grey;
+}
+
+header .title {
+  display: flex;
+  align-items: center;
+}
+header .title img {height: 50px;}
+header .title h1 {
+  font-size: 1rem;
+}
+
+header .navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+}
+header .navbar a {
+  color: white;
+}
 
 /* hero */
 #hero {
+  height: 200px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 #hero img {
-  width: 100vh;
+  width: 100%;
 }
+
+/* restaurant */
+main .title h1 {
+  padding: 10px 0;
+  text-align: center;
+}
+
+#restaurant {
+  /* padding: 10px 0; */
+  display: grid;
+  flex-direction: column;
+  grid-template-columns: 1fr;
+}
+@media screen and (min-width: 700px) {
+  #restaurant {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #restaurant .card-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    overflow: hidden;
+  }
+}
+@media screen and (min-width: 900px) {
+  #restaurant {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  #restaurant .card-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+  }
+}
+
+#restaurant .card-image img,
+#restaurant .card-content {
+  width: 100%;
+
+}
+
+#restaurant .card {
+  padding: 10px 10px;
+  /* max-height: 400px; */
+  display: grid;
+  align-content: flex-start;
+  flex-direction: column;
+  overflow: hidden;
+
+}
+
+#restaurant .card-content {
+  display: flex;
+  flex-direction: column;
+
+}
+
+#restaurant .card p {
+  font-size: 0.7rem;
+  white-space: wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* footer */
+footer {
+  width: 100%;
+  display: flex;
+  height: 100px;
+  background: #333333;
+  color: white;
+}
+footer .title {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 1rem;
+}
+
 @media screen and (min-width: 1200px) {
-  #hero img {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main {
     width: 1000px;
   }
+}
+
+
+a:focus {
+  color: blue !important;
+}
+*:focus {
+  color: blue !important;
 }
