--- a/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
@@ -7,16 +7,18 @@
 </head>
 <body>
 
+  <a tabindex="1" href="#explore" class="skip-link">Menuju ke konten</a>
   <header>
     <div class="title">
       <img src="./images/logo/logo.webp" alt="logo-gurih">
       <!-- <h1>Gurih Nusantara</h1> -->
     </div>
     <nav class="navbar">
-      <a tabindex="1" href="./">Home</a>
-      <a tabindex="2" href="#explore">Favorite</a>
-      <a tabindex="3" href="https://s.id/ariafatah">About Us</a>
-      <!-- <a tabindex="3" href="#">About Us</a> -->
+      <a tabindex="2" href="./">home</a>
+      <a tabindex="3" href="#explore">explore</a>
+      <a tabindex="4" href="#">favorite</a>
+      <a tabindex="5" href="#contact">contact</a>
+      <a tabindex="6" href="https://s.id/ariafatah">about us</a>
     </nav>
   </header>
 
@@ -25,57 +27,14 @@
       <img src="./images/heros/hero-image_2.jpg" alt="">
     </section>
 
-    <div id="explore" tabindex="4" class="title">
-      <h1>explore Restaurant</h1>
+    <div id="explore" class="title">
+      <h1 tabindex="7">explore Restaurant</h1>
+      <!-- <div>
+        <label for="explore-search">search restaurant</label><input id="explore-search" type="text">
+      </div> -->
     </div>
-    
-    <section id="restaurant">
 
-      <div class="card">
-        <div class="card-image">
-          <img src="https://restaurant-api.dicoding.dev/images/medium/41" alt="">
-        </div>
-        <div class="card-content" tabindex="0">
-          <h2>Rating: 4.6</h2>
-          <h3>Bring Your Phone Cafe</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-image">
-          <img src="https://restaurant-api.dicoding.dev/images/medium/07" alt="">
-        </div>
-        <div class="card-content" tabindex="0">
-          <h2>Rating: 4.6</h2>
-          <h3>Bring Your Phone Cafe</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-image">
-          <img src="https://restaurant-api.dicoding.dev/images/medium/38" alt="">
-        </div>
-        <div class="card-content" tabindex="0">
-          <h2>Rating: 4.6</h2>
-          <h3>Bring Your Phone Cafe</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-image">
-          <img src="https://restaurant-api.dicoding.dev/images/medium/07" alt="">
-        </div>
-        <div class="card-content" tabindex="0">
-          <h2>Rating: 4.6</h2>
-          <h3>Bring Your Phone Cafe</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet</p>
-        </div>
-      </div>
-      
-    </section>
+    <restaurant-list id="restaurant"></restaurant-list>
   </main>
 
   <footer tabindex="0">
@@ -89,23 +48,3 @@
 
 </body>
 </html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Restaurant Apps</title>
-  </head>
-  <body>
-    <h1>Restaurant Apps Starter Project</h1>
-    <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-    <p>
-      Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros
-      sebagai background hero elemen.
-    </p>
-    <img src="./images/heros/hero-image_1.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_2.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_3.jpg" width="450" alt="" />
-    <img src="./images/heros/hero-image_4.jpg" width="450" alt="" />
-  </body>
-</html> -->
