--- a/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
@@ -3,26 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Restaurant app, restaurant list">
   <title>Restaurant app</title>
 </head>
 <body>
 
-  <a tabindex="1" href="#explore" class="skip-link">Menuju ke konten</a>
+  <a tabindex="0" href="#explore" class="skip-link">Menuju ke konten</a>
 
   <header id="home">
     <div class="header-logo">
       <img src="./images/logo/logo.webp" alt="">
     </div>
     <div class="menu-container">
-      <div id="menu" class="menu-icon">☰</div>
+      <button id="menu" class="menu-icon">☰</button>
     </div>
     <nav id="drawer" class="nav">
       <ul>
-        <li><a tabindex="2" href="#">home</a></li>
-        <li><a tabindex="3" href="#explore">explore</a></li>
-        <li><a tabindex="3" href="#top-restaurant">top</a></li>
-        <li><a tabindex="4" href="#favorite">favorite</a></li>
-        <li><a tabindex="5" href="https://s.id/ariafatah">about us</a></li>
+        <li><a tabindex="0" href="#">home</a></li>
+        <li><a tabindex="0" href="#explore">explore</a></li>
+        <li><a tabindex="0" href="#top-restaurant">top</a></li>
+        <li><a tabindex="0" href="#favorite">favorite</a></li>
+        <li><a tabindex="0" href="https://s.id/ariafatah">about us</a></li>
       </ul>
     </nav>
   </header>
