--- a/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/submission/01 - restaurant-apps/src/templates/index.html
@@ -19,11 +19,11 @@
     </div>
     <nav id="drawer" class="nav">
       <ul>
-        <li><a tabindex="0" href="#">home</a></li>
-        <li><a tabindex="0" href="#explore">explore</a></li>
-        <li><a tabindex="0" href="#top-restaurant">top</a></li>
-        <li><a tabindex="0" href="#favorite">favorite</a></li>
-        <li><a tabindex="0" href="https://s.id/ariafatah">about us</a></li>
+        <li><a href="#">home</a></li>
+        <li><a href="#explore">explore</a></li>
+        <li><a href="#top-restaurant">top</a></li>
+        <li><a href="#favorite">favorite</a></li>
+        <li><a href="https://s.id/ariafatah">about us</a></li>
       </ul>
     </nav>
   </header>
