--- a/05 - Menjadi Front-End Web Developer Expert/04 - Progressive Web Apps/01 - project/src/templates/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/04 - Progressive Web Apps/01 - project/src/templates/index.html
@@ -6,7 +6,10 @@
   <meta name="description" content="Free movie catalogue for you">
   <link rel="icon" href="./favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  
+  <!-- manifest -->
+  <link rel="manifest" href="./app.webmanifest">
+  <meta name="theme-color" content="#DB0000"/>
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <title>Movie Catalogue</title>
 </head>
 <body>
