--- a/05 - Menjadi Front-End Web Developer Expert/04 - Progressive Web Apps/02 - movie-catalogue/src/templates/index.html
+++ b/05 - Menjadi Front-End Web Developer Expert/04 - Progressive Web Apps/02 - movie-catalogue/src/templates/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="manifest" href="./app.webmanifest">
   
+  <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+  
   <title>Movie Catalogue Lite</title>
 </head>
 <body>
