--- a/04 - Belajar Tools Front-End Web Intermediate/04 - dom lit/02 - money-tracker-app/src/views/transactions/add.html
+++ b/04 - Belajar Tools Front-End Web Intermediate/04 - dom lit/02 - money-tracker-app/src/views/transactions/add.html
@@ -22,37 +22,47 @@
                 <form class="row g-3" id="editRecordForm" novalidate>
                     <div class="col-12 col-md-6">
                         <label for="validationCustomRecordName" class="form-label">Nama</label>
-                        <input type="text" class="form-control" id="validationCustomRecordName" required />
-                        <div class="invalid-feedback">Wajib diisi</div>
+                        <input-with-validation type="text" inputId="validationCustomRecordName"
+                            invalidFeedbackMessage="Wajib diisi" required></input-with-validation>
+                        <!-- <input type="text" class="form-control" id="validationCustomRecordName" required /> -->
+                        <!-- <div class="invalid-feedback">Wajib diisi</div> -->
                     </div>
 
                     <div class="col-12 col-md-6">
                         <label for="validationCustomAmount" class="form-label">Jumlah Uang</label>
                         <div class="input-group has-validation">
-                            <span class="input-group-text">Rp</span>
-                            <input type="number" class="form-control" id="validationCustomAmount" required />
-                            <div class="invalid-feedback">Wajib diisi</div>
+                            <input-group-with-validation type="number" inputGroupText="Rp"
+                                inputId="validationCustomAmount" invalidFeedbackMessage="Wajib diisi" validation
+                                required></input-group-with-validation>
+                            <!-- <input type="number" class="form-control" id="validationCustomAmount" required />
+                            <div class="invalid-feedback">Wajib diisi</div> -->
                         </div>
                     </div>
 
                     <div class="col-12 col-md-6">
                         <label for="validationCustomDate" class="form-label">Tanggal</label>
                         <div class="input-group has-validation">
-                            <span class="input-group-text"><i class="bi bi-calendar-event"></i></span>
-                            <input type="datetime-local" class="form-control" id="validationCustomDate" required />
-                            <div class="invalid-feedback">Wajib diisi</div>
+                            <input-group-with-validation type="datetime-local" inputId="validationCustomDate"
+                                inputGroupIcon="bi-calendar-event" invalidFeedbackMessage="Wajib diisi" validation
+                                required></input-group-with-validation>
+                            <!-- <input type="datetime-local" class="form-control" id="validationCustomDate" required />
+                            <div class="invalid-feedback">Wajib diisi</div> -->
                         </div>
                     </div>
 
                     <div class="col-12 col-md-6">
                         <label for="validationCustomNotes" class="form-label">Catatan</label>
-                        <textarea class="form-control" id="validationCustomNotes" rows="3"></textarea>
-                        <div class="invalid-feedback">Wajib diisi</div>
+                        <textarea-with-validation inputId="validationCustomNotes" invalidFeedbackMessage="Wajib diisi"
+                            required></textarea-with-validation>
+                        <!-- <textarea class="form-control" id="validationCustomNotes" rows="3"></textarea>
+                        <div class="invalid-feedback">Wajib diisi</div> -->
                     </div>
 
                     <div class="col-12 col-md-6">
                         <label for="validationCustomEvidence" class="form-label">Bukti tagihan</label>
-                        <div style="width: 100%; height: 15rem" class="mb-3">
+                        <input-image-with-preview inputId="validationCustomEvidence"
+                            invalidFeedbackMessage="Wajib diisi" required></input-image-with-preview>
+                        <!-- <div style="width: 100%; height: 15rem" class="mb-3">
                             <img class="img-fluid h-100" src="" alt="Evidence of records"
                                 id="validationCustomEvidenceImg" />
                             <div class="w-100 h-100 d-none" style="
@@ -63,21 +73,24 @@
                         </div>
                         <input type="file" class="form-control" id="validationCustomEvidence" accept="image/*"
                             required />
-                        <div class="invalid-feedback">Wajib diisi</div>
+                        <div class="invalid-feedback">Wajib diisi</div> -->
                     </div>
 
                     <div class="col-12 col-md-6">
                         <div class="form-label">Tipe</div>
-                        <div class="form-check form-check-inline">
+                        <input-radio-with-validation id="inputRadioTransactionTypeAdd"
+                            invalidFeedbackMessage="Wajib diisi" name="recordType"
+                            required></input-radio-with-validation>
+                        <!-- <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="recordType" id="recordTypeIncome"
                                 value="income" required />
                             <label class="form-check-label" for="recordTypeIncome">Pemasukan</label>
-                        </div>
-                        <div class="form-check form-check-inline">
+                        </div> -->
+                        <!-- <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="recordType" id="recordTypeExpense"
                                 value="expense" required />
                             <label class="form-check-label" for="recordTypeExpense">Pengeluaran</label>
-                        </div>
+                        </div> -->
                         <div class="invalid-feedback">Wajib diisi</div>
                     </div>
 
